# lsquant

./: .agent-pr-test  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  FLAVOR_INVENTORY.md  GOLDEN_PROVENANCE.txt  HANDOFF_golden_chain1d.md  README  README.md  ROADMAP.md  TODO.md  infrastructure_plan.md  lsquant_chain_reference.py  lsquant_derive_core.py  lsquant_derive_spin.py  lsquant_derive_transport.py  lsquant_new_physics.md  reporting_system.md  unified_io.md
.githooks/: pre-commit
.github/workflows/: docs.yml
agent_template/: documentation_STYLE_GUIDE.md  documentation_TEMPLATE.md  tutorial_style.md  tutorial_template.md
bench/: CAPTIONS.md  make_graphene.py  plot_graphene_scaling.py  run_graphene_scaling.sh
cmake/: FetchWannier2Sparse.cmake
docs/: CMakeLists.txt  Doxyfile.in  linqt.dox  lsquant.dox  main.md  reconstruction.md  requirements.txt  spectral_scales.md  spinrelaxation.md  time_evolution.md
docs/perf/: PERF_ANALYSIS.md
docs/performance/: README.md
examples/: .gitignore  prl_style.py  style_demo.py
examples/01_dos_1d_chain/: README.md  SpectralOp1chain1d_N256KPM_M512_stateexact_chain1d_N256.chebmom1D  SpectralOp1chain1d_N4096KPM_M512_stateexact_chain1d_N4096.chebmom1D  exact_chain1d_N1024  (+8 more)
include/: Kubo_solver_FFT.hpp  chebyshev_coefficients.hpp  chebyshev_moments.hpp  chebyshev_moments_Device.hpp  chebyshev_moments_Graphene_NNN.hpp  chebyshev_solver.hpp  compute.hpp  fftw_wrapper.hpp  hamiltonian_op.hpp  inspect.hpp  metric_policy.hpp  observable.hpp  operator_descriptor.hpp  optical_conductivity_tools.hpp  quantum_states.hpp  recon_grid.hpp  run_config.hpp  sparse_matrix.hpp  special_functions.hpp  units.hpp
legacy/: README.md  device-postProcess.cpp  inline_compute-Kubo-kpm-FFT-nonOrth.cpp  inline_compute-Kubo-kpm-FFT.cpp  inline_compute-kpm-GetDeltaPhi.cpp  inline_compute-kpm-LocalDOS.cpp  inline_compute-kpm-TimeEvOp.cpp  inline_compute-kpm-TimeEvOpwithWF.cpp  inline_compute-kpm-TimeEvProjetedOp-Projecting_WF.cpp  inline_compute-kpm-spacialresolution.cpp  inline_compute-kpm-spectralOp-nonOrth.cpp  inline_kpm-S-inversion.cpp  kpm-nonOrth-precision-test.cpp  kuboBastinIFromChebmom.cpp  kuboBastinIIFromChebmom.cpp  localDensitiesFromChebmom.cpp  opticalConductivityFromChebmom.cpp  spectralFunctionFromChebmom_FFTgrid.cpp  spectralFunctionFromChebmom_Lorentz.cpp
scripts/: check_reporting.sh  fetch_wannier2sparse.sh  regenerate_goldens.sh
src/: CMakeLists.txt  Kubo_solver_FFT_postProcess.cpp  chebyshev_moments.cpp  chebyshev_moments1D.cpp  chebyshev_moments2D.cpp  chebyshev_momentsAC.cpp  chebyshev_momentsLocal.cpp  chebyshev_momentsTD.cpp  chebyshev_solver.cpp  chebyshev_vectors.cpp  compute.cpp  eigen_sparse_matrix.cpp  inline_compute-kpm-CorrOp.cpp  inline_compute-kpm-GetDeltaPhi.cpp  inline_compute-kpm-LocalDOS.cpp  inline_compute-kpm-MeanSquareDisplacement.cpp  inline_compute-kpm-TimeEvOp.cpp  inline_compute-kpm-TimeEvOpwithWF.cpp  inline_compute-kpm-TimeEvProjetedOp-Projecting_WF.cpp  inline_compute-kpm-nonEqOp.cpp  inline_compute-kpm-spacialresolution.cpp  inline_compute-kpm-spectralOp.cpp  inline_kpm-DOS-standalone.cpp  inline_kpm-DOS-standalone_Graphene_NNN.cpp  inline_kpm-S-inversion.cpp  inspect.cpp  kuboBastinFromChebmom.cpp  kuboBastinFromChebmom_FFTgrid.cpp  kuboBastinIFromChebmom.cpp  kuboBastinIIFromChebmom.cpp  kuboBastinSeaFromChebmom.cpp  kuboBastinSurfFromChebmom.cpp  kuboGreenwoodFromChebmom.cpp  kuboGreenwoodFromChebmom_FFTgrid.cpp  localDensitiesFromChebmom.cpp  lsquant.cpp  lsquant_inspect.cpp  operator_descriptor.cpp  opticalConductivityFromChebmom.cpp  reconstruction.cpp  (+5 more)
src/io/: config.cpp  fingerprint.cpp  json.cpp  results.cpp
src/util/: log.cpp  report.cpp  resource.cpp  resource_linux.cpp  resource_stub.cpp  timer.cpp
test/: CMakeLists.txt  TEST_PLAN.md  chain1d_analytic_test.cpp  chain1d_dos_test.cpp  chain1d_reproduce.sh  chebmom_compare.cpp  config_equivalence.sh  corrop_state_honored.sh  descriptor_bounds.sh  descriptor_conformance_test.cpp  dos_reconstructed.sh  dos_reconstructed_test.cpp  example_dos_smoke.sh  example_haldane_smoke.sh  example_localization_smoke.sh  fft_grid_regression.sh  graphene_reproduce.sh  greenwood_regression.sh  hall_haldane.sh  jackson_g_test.cpp  jackson_kernel_test.cpp  msd_ballistic.sh  phase6_scaffolding_test.cpp  phase6_wired_test.cpp  recon_kernel_oracle_test.cpp  reconstruction_nan_guard.sh  reporting_smoke.sh  safety_factors_guard.sh  sea_surf_regression.sh  single_binary.sh  spin_algebra_test.cpp  spin_precession.sh  spmm_batchmultiply_equiv_test.cpp  spmv_threaded_bitexact_test.cpp  tb_descriptor_test.cpp  unified_io_smoke.sh
test/golden/: NonEqOpVX-VXgraphene_goldenKPM_M64x64_statedefault.chebmom2D  chain1d_analytic_M.txt  gen_chain1d_reference.py
test/golden/chain1d/: BOUNDS  DOS_reference.txt  KG_reference.txt  NonEqOpVX-VXchain1dKPM_M64x64_statedefault.chebmom2D  NonEqOpVX-VXchain1dKPM_M64x64_stateexact.chebmom2D  SpectralOp1chain1dKPM_M64_statedefault.chebmom1D  SpectralOp1chain1dKPM_M64_stateexact.chebmom1D
test/golden/chain1d/operators/: chain1d.HAM.CSR  chain1d.VX.CSR
test/golden/chain1d_ballistic/operators/: chain1d.HAM.CSR  chain1d.HAM.desc  chain1d.VX.CSR
test/golden/haldane/operators/: haldane.HAM.CSR  haldane.VX.CSR  haldane.VY.CSR
test/golden/operators/: graphene_golden.HAM.CSR  graphene_golden.HAM.desc  graphene_golden.SX.CSR  graphene_golden.SY.CSR  graphene_golden.SZ.CSR  graphene_golden.VX.desc  graphene_golden.VXSX.CSR  graphene_golden.VXSY.CSR  graphene_golden.VXSZ.CSR  graphene_golden.VYSX.CSR  graphene_golden.VYSY.CSR  graphene_golden.VYSZ.CSR  graphene_golden.VZSX.CSR  graphene_golden.VZSY.CSR  graphene_golden.VZSZ.CSR
test/models/chain1d_mag/: README.md  chain1d_mag.xyz
test/models/chain1d_mag/operators/: chain1d_mag.HAM.CSR  chain1d_mag.HAM.desc  chain1d_mag.PX.CSR  chain1d_mag.SX.CSR  chain1d_mag.SY.CSR  chain1d_mag.SZ.CSR  chain1d_mag.VX.CSR
utilities/: CMakeLists.txt
utilities/python/: CMakeLists.txt  lsquant_report.py
utilities/siesta2sparse/: siesta2lsquant.py  siesta2lsquant_realspace.py
(+35 files in other folders)
